--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,18 @@
     text-align: center;
     justify-content: center; } }
 
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
+
 /*reset*/
 * {
   padding: 0rem;
@@ -41,6 +53,18 @@
     align-items: center;
     text-align: center;
     justify-content: center; } }
+
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
 
 /* estilo de productos */
 .contenedorpro {
@@ -79,6 +103,18 @@
     align-items: center;
     text-align: center;
     justify-content: center; } }
+
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
 
 /* estilos del nav */
 .body header nav {
@@ -126,20 +162,21 @@
 /* estilos del h1 */
 .body main p {
   line-height: 2rem;
-  font-size: 1.125rem; }
+  font-size: 1.125rem;
+  text-align: center; }
 
-.body main h1 {
-  font-size: 2rem;
+.body main #h1 {
+  font-size: 3rem;
   text-align: center;
   margin: 2rem;
   text-decoration: underline #319fe7;
   font-family: Tiemann,serif; }
 
-.body main h2 {
+.body main #h2 {
   text-decoration: underline #319fe7;
   font-family: Tiemann,serif; }
 
-.body main h3 {
+.body main #h3 {
   margin-top: 2rem;
   text-decoration: underline #319fe7;
   font-family: Tiemann,serif; }
@@ -163,26 +200,63 @@ section {
 #p {
   margin: 0.5rem; }
 
+@media screen and (min-width: 600px) {
+  .contenedorindex {
+    display: grid;
+    margin: 3rem;
+    row-gap: 1rem;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: center;
+    justify-content: center; } }
+
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
+
 /*estilos del index*/
 .contenedorindex__logo {
   display: none; }
 
-.contenedorindex {
+.mainindex {
   display: flex;
-  flex-direction: column;
-  align-items: center; }
-  .contenedorindex .contenedorindex__video {
+  justify-content: center;
+  flex-direction: column; }
+  .mainindex .mainindex__sec1 {
+    position: absolute;
+    top: 5.8rem;
+    left: 0;
+    z-index: 1;
+    width: 100%; }
+    .mainindex .mainindex__sec1 .mainindex__sec1__video {
+      width: 100%; }
+  .mainindex .mainindex__sec2 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    height: 20rem;
-    padding: 1rem; }
-  .contenedorindex .contenedorindex__p {
-    display: none; }
-  .contenedorindex .contenedorindex__h2 {
-    font-size: 2rem;
-    margin-top: 2rem; }
-  .contenedorindex p {
-    text-align: center;
-    padding: 1rem; }
+    z-index: 2;
+    height: 40rem; }
+  .mainindex .mainindex__sec3 {
+    margin-top: 6rem; }
+    .mainindex .mainindex__sec3 .mainindex__sec3__div1 {
+      display: grid;
+      grid-template-areas: "img h1" "img p"; }
+    .mainindex .mainindex__sec3 .mainindex__sec3__div2 {
+      display: grid;
+      grid-template-areas: "h1 img" "p img"; }
+    .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+      display: grid;
+      grid-template-areas: "img h1" "img p"; }
 
 @media screen and (min-width: 600px) {
   .contenedorindex {
@@ -193,6 +267,18 @@ section {
     align-items: center;
     text-align: center;
     justify-content: center; } }
+
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
 
 /*estilos de nos*/
 .contenedornos {
@@ -222,6 +308,18 @@ section {
     text-align: center;
     justify-content: center; } }
 
+.mainindex .mainindex__sec3 .mainindex__sec3__div1, .mainindex .mainindex__sec3 .mainindex__sec3__div2, .mainindex .mainindex__sec3 .mainindex__sec3__div3 {
+  grid-template-rows: 40% 60%;
+  row-gap: 1rem;
+  margin-bottom: 2rem; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 p, .mainindex .mainindex__sec3 .mainindex__sec3__div2 p, .mainindex .mainindex__sec3 .mainindex__sec3__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div2 h1, .mainindex .mainindex__sec3 .mainindex__sec3__div3 h1 {
+    grid-area: h1; }
+  .mainindex .mainindex__sec3 .mainindex__sec3__div1 img, .mainindex .mainindex__sec3 .mainindex__sec3__div2 img, .mainindex .mainindex__sec3 .mainindex__sec3__div3 img {
+    width: 30rem;
+    grid-area: img; }
+
 /* estilos de la mediaquerie */
 @media screen and (min-width: 600px) {
   /* estilos de sedes*/
@@ -237,8 +335,6 @@ section {
   /*estilos del nav*/
   #a {
     font-size: 1rem; }
-  #ul {
-    padding-left: 8rem; }
   .body header nav {
     height: 5.8rem; }
   /*estilos de index*/
