--- a/css/style.css
+++ b/css/style.css
@@ -245,8 +245,10 @@ section {
     align-items: center;
     width: 100%;
     z-index: 2;
-    height: 40rem; }
+    height: 40rem;
+    margin-bottom: 6rem; }
   .mainindex .mainindex__sec3 {
+    margin: 1rem;
     margin-top: 6rem; }
     .mainindex .mainindex__sec3 .mainindex__sec3__div1 {
       display: grid;
