--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -32,11 +32,12 @@
         width: 100%;
         z-index: 2;
         height: 40rem;
+        margin-bottom: 6rem;
     }
 
     .mainindex__sec3 {
+        margin: $medida-1;
         margin-top: $medida-2 * 3;
-
         .mainindex__sec3__div1 {
             display: grid;
             grid-template-areas:
