--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -27,18 +27,91 @@
     .mainindex__sec2 {
         position: relative;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100%;
         z-index: 2;
         height: 40rem;
         margin-bottom: 6rem;
+        p{
+            background: -webkit-linear-gradient( nth($colores,3), nth($colores,8));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-size: $medida-1 + 0.25rem;
+        }
     }
-
-    .mainindex__sec3 {
+    .mainindex__sec3{
+        .mainindex__sec3__contenedorpro__hijo {
+            @include margen(0rem $medida-1, $medida-1 0rem);
+            width: auto;
+            text-align: center;
+            border: 0.3rem solid nth($colores,7);
+            border-radius: $medida-3;
+            overflow: auto;
+            transition: 1s;
+            margin-top: $medida-2;
+            h2 {
+                padding: $medida-1;
+            }
+            p {
+                font-weight: bold;
+                font-size: $medida-1 + $medida-3;
+                padding-bottom: $medida-1;
+                .s1{
+                    text-decoration: line-through;
+                    opacity: 50%;
+                }
+            }
+            &:hover {
+                transform: scale(1.08);
+            }
+            img {
+                @include sizes(66.6%, 12.5rem)
+            }
+            span {
+                padding: $medida-3;
+            }
+        }
+        .mainindex__sec3__contenedorpro {
+            display: flex;
+            justify-content: center;
+            flex-flow: row nowrap;
+        }
+        .mainindex__sec3__boton{
+            display: flex;
+            justify-content: center;
+            margin-top: $medida-2 * 1.2;
+            font-size: $medida-1 + $medida-3;
+            transition: 1s;
+            margin-bottom: -$medida-2 * 1.5;
+            button{
+                border: 0.3rem solid nth($colores,2);
+                border-radius: $medida-3;
+                transition: 1s;
+                &:hover {
+                    transform: scale(1.08);
+                }
+            }
+            a{
+                display: inline-block;
+                padding: $medida-1;
+                text-decoration: none;  
+                color: nth($colores, 2 );
+                letter-spacing: 0.15rem;
+                font-weight: bold;
+                border: 0.3rem solid nth($colores,7);
+            }
+        }
+        .mainindex__sec3__contenedorpro__hijo {
+            width: 33.3%;
+        }
+        
+    }
+    .mainindex__sec4 {
         margin: $medida-1;
         margin-top: $medida-2 * 3;
-        .mainindex__sec3__div1 {
+        .mainindex__sec4__div1 {
             display: grid;
             grid-template-areas:
                 "img h1"
@@ -46,7 +119,7 @@
             @extend %grid2;
         }
 
-        .mainindex__sec3__div2 {
+        .mainindex__sec4__div2 {
             display: grid;
             grid-template-areas:
                 "h1 img"
@@ -54,7 +127,7 @@
             @extend %grid2;
         }
 
-        .mainindex__sec3__div3 {
+        .mainindex__sec4__div3 {
             display: grid;
             grid-template-areas:
                 "img h1"
