--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
@@ -57,7 +59,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
@@ -107,7 +111,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
@@ -162,21 +168,19 @@
 /* estilos del h1 */
 .body main p {
   line-height: 2rem;
-  font-size: 1.125rem;
-  text-align: center; }
+  font-size: 1.125rem; }
 
 .body main #h1 {
   font-size: 3rem;
-  text-align: center;
   margin: 2rem;
   text-decoration: underline #319fe7;
-  font-family: Tiemann,serif; }
+  font-family: Tiemann,serif;
+  margin-bottom: 1rem; }
 
 .body main #h2 {
   font-size: 2.3rem;
   text-decoration: underline #319fe7;
   font-family: Tiemann,serif;
-  text-align: center;
   margin: 2rem; }
 
 .body main #h3 {
@@ -197,7 +201,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
@@ -216,7 +222,7 @@
   flex-direction: column; }
   .mainindex .mainindex__sec1 {
     position: absolute;
-    top: 5.8rem;
+    top: 5.6rem;
     left: 0;
     z-index: 1;
     width: 100%; }
@@ -295,13 +301,28 @@
     margin-top: 6rem; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div1 {
       display: grid;
+      margin-top: 3rem;
       grid-template-areas: "img h1" "img p"; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3 {
+        text-align: left; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div1 p {
+        text-align: left; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div2 {
       display: grid;
+      margin-top: 8rem;
       grid-template-areas: "h1 img" "p img"; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3 {
+        text-align: right; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div2 p {
+        text-align: right; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
       display: grid;
+      margin-top: 8rem;
       grid-template-areas: "img h1" "img p"; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+        text-align: left; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+        text-align: left; }
 
 @media screen and (min-width: 600px) {
   .contenedorindex {
@@ -316,7 +337,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
@@ -356,7 +379,9 @@
 .mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+  width: 60%;
+  column-gap: 1rem; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
   .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
