--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -17,6 +17,8 @@
     grid-template-rows: 40% 60%;
     row-gap: $medida-1;
     margin-bottom: $medida-2;
+    width: 60%;
+    column-gap: $medida-1;
     p {
         grid-area: p;
     }
