--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
@@ -56,17 +55,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
@@ -108,17 +106,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
@@ -198,17 +195,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
@@ -254,7 +250,8 @@
     transition: 1s;
     margin-top: 2rem; }
     .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo h2 {
-      padding: 1rem; }
+      padding: 1rem;
+      text-align: center; }
     .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
       font-weight: bold;
       font-size: 1.5rem;
@@ -298,31 +295,55 @@
     width: 33.3%; }
   .mainindex .mainindex__sec4 {
     margin: 1rem;
-    margin-top: 6rem; }
+    margin-top: 6rem;
+    display: grid;
+    grid-template-areas: "h2" "div1" "div2" "div3"; }
+    .mainindex .mainindex__sec4 h2 {
+      grid-area: h2;
+      text-align: center; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div1 {
+      grid-area: div1;
       display: grid;
       margin-top: 3rem;
       grid-template-areas: "img h1" "img p"; }
       .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3 {
         text-align: left; }
       .mainindex .mainindex__sec4 .mainindex__sec4__div1 p {
-        text-align: left; }
+        text-align: left;
+        width: 35%; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div1 img {
+        width: 25%;
+        height: 18rem; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div2 {
-      display: grid;
-      margin-top: 8rem;
-      grid-template-areas: "h1 img" "p img"; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3 {
-        text-align: right; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__div2 p {
-        text-align: right; }
+      grid-area: div2;
+      align-self: flex-end; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div2 div {
+        display: grid;
+        margin-top: 8rem;
+        grid-template-areas: "h1 img" "p img"; }
+        .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h3 {
+          text-align: right; }
+        .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p {
+          display: inline-block;
+          align-self: center;
+          text-align: right;
+          width: 35%; }
+        .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img {
+          width: 25%;
+          height: 18rem; }
     .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+      grid-area: div3;
       display: grid;
       margin-top: 8rem;
       grid-template-areas: "img h1" "img p"; }
       .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
         text-align: left; }
       .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
-        text-align: left; }
+        text-align: left;
+        width: 35%; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+        width: 25%;
+        height: 18rem; }
 
 @media screen and (min-width: 600px) {
   .contenedorindex {
@@ -334,17 +355,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
@@ -376,17 +396,16 @@
     text-align: center;
     justify-content: center; } }
 
-.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
   grid-template-rows: 40% 60%;
   row-gap: 1rem;
   margin-bottom: 2rem;
-  width: 60%;
   column-gap: 1rem; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
     grid-area: p; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h1, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div h1, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h1 {
     grid-area: h1; }
-  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
     width: 30rem;
     grid-area: img; }
 
