--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -35,6 +35,7 @@
         z-index: 2;
         height: 40rem;
         margin-bottom: 6rem;
+
         p {
             background: -webkit-linear-gradient(nth($colores, 3), nth($colores, 8));
             -webkit-background-clip: text;
@@ -125,82 +126,93 @@
     }
 
     .mainindex__sec4 {
-        margin: $medida-1;
         margin-top: $medida-2 * 3;
         display: grid;
-        grid-template-areas: 
-        "h2"
-        "div1"
-        "div2"
-        "div3";
-        h2{
+        width: 100%;
+        grid-template-columns: 38% 24% 38%;
+        row-gap: 10rem;
+        grid-template-areas:
+            "h2 h2 h2"
+            "img ph3 b"
+            "b2 ph32 img2"
+            "img3 ph33 b3";
+        h2 {
             grid-area: h2;
             text-align: center;
         }
-        .mainindex__sec4__div1 {
-            grid-area: div1;
-            display: grid;
-            margin-top: 3rem;
-            grid-template-areas:
-                "img h1"
-                "img p";
-            @extend %grid2;
-            h3 {
-                text-align: left;
-            }
-            p {
-                text-align: left;
-                width: 35%;
-            }
+        .mainindex__sec4__img {
+            grid-area: img;
+            display: flex;
+            justify-content: center;
+            height: 18rem;
             img{
-                @include sizes(25%,18rem)
+                @include sizes(90%,18rem);
             }
         }
-
-        .mainindex__sec4__div2 {
-            grid-area: div2;
-            align-self: flex-end;
-            div{
-                display: grid;
-            margin-top: 8rem;
-            grid-template-areas:
-                "h1 img"
-                "p img";
-            @extend %grid2;
-            h3 {
-                text-align: right;
-            }
-            p {
-                display: inline-block;
-                align-self: center;
-                text-align: right;
-                width: 35%;
-            }
+        .mainindex__sec4__img2 {
+            grid-area: img2;
+            display: flex;
+            justify-content: center;
+            height: 18rem;
             img{
-                @include sizes(25%,18rem)
-            }
+                @include sizes(90%,18rem);
             }
         }
-
-        .mainindex__sec4__div3 {
-            grid-area: div3;
-            display: grid;
-            margin-top: 8rem;
-            grid-template-areas:
-                "img h1"
-                "img p";
-            @extend %grid2;
-            h3 {
-                text-align: left;
-            }
-            p {
-                text-align: left;
-                width: 35%;
-            }
+        .mainindex__sec4__img3 {
+            grid-area: img3;
+            display: flex;
+            justify-content: center;
+            height: 18rem;
             img{
-                @include sizes(25%,18rem)
+                @include sizes(90%,18rem);
             }
+        }
+        .mainindex__sec4__ph3 {
+            grid-area: ph3;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            p{
+                text-align: left;
+            }
+            h3{
+                text-align: left;
+                width: 90%;
+                padding-right: 1rem;
+            }
+        }
+        .mainindex__sec4__ph32 {
+            grid-area: ph32;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            p{
+                text-align: right;
+            }
+            h3{
+                text-align: right;
+            }
+        }
+        .mainindex__sec4__phr33 {
+            grid-area: ph33;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            p{
+                text-align: left;
+            }
+            h3{
+                text-align: left;
+            }
+        }
+        .b {
+            grid-area: b;
+        }
+        .b2{
+            grid-area: b2;
+        }
+        .b3{
+            grid-area: b3;
         }
     }
-
 }
