--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
+
 /*reset*/
 * {
   padding: 0rem;
@@ -21,6 +38,23 @@
     border: 0.25rem solid #bad9e5; }
     .main .main__caja div {
       margin: 2rem; }
+
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
 
 /* estilo de productos */
 .contenedorpro {
@@ -49,6 +83,23 @@
     height: 12.5rem; }
   .contenedorpro__hijo span {
     padding: 0.5rem; }
+
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
 
 /* estilos del nav */
 .body header nav {
@@ -93,25 +144,22 @@
     .footer div a {
       margin: 0.5rem; }
 
-/* estilos del h1 */
-.body main p {
-  line-height: 2rem;
-  font-size: 1.125rem; }
-
-.body main #h1 {
-  font-size: 3rem;
-  text-decoration: underline #319fe7;
-  font-family: Tiemann,serif; }
-
-.body main #h2 {
-  font-size: 2.3rem;
-  text-decoration: underline #319fe7;
-  font-family: Tiemann,serif; }
-
-.body main #h3 {
-  margin-top: 2rem;
-  text-decoration: underline #319fe7;
-  font-family: Tiemann,serif; }
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
 
 /*estilos del index*/
 .contenedorindex__logo {
@@ -144,6 +192,14 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 1.25rem; }
+  .mainindex .mainindex__sec3 h1 {
+    text-align: center;
+    padding: 1rem;
+    text-align: center;
+    margin: 4rem;
+    font-size: 4.5rem;
+    text-decoration: underline #319fe7;
+    font-family: Tiemann, serif; }
   .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
     padding: 1rem 0rem;
     margin: 0rem 1rem;
@@ -154,13 +210,12 @@
     overflow: auto;
     transition: 1s;
     margin-top: 2rem; }
-    .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo h2 {
-      padding: 1rem;
-      text-align: center; }
     .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p {
       font-weight: bold;
       font-size: 1.5rem;
-      padding-bottom: 1rem; }
+      padding-bottom: 1rem;
+      line-height: 2rem;
+      font-size: 1.125rem; }
       .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo p .s1 {
         text-decoration: line-through;
         opacity: 50%; }
@@ -198,75 +253,79 @@
       border: 0.3rem solid #bad9e5; }
   .mainindex .mainindex__sec3 .mainindex__sec3__contenedorpro__hijo {
     width: 33.3%; }
+  .mainindex hr {
+    margin: 0;
+    margin-top: 8rem; }
   .mainindex .mainindex__sec4 {
     margin-top: 6rem;
-    display: grid;
-    width: 100%;
-    grid-template-columns: 38% 24% 38%;
-    row-gap: 10rem;
-    grid-template-areas: "h2 h2 h2" "img ph3 b" "b2 ph32 img2" "img3 ph33 b3"; }
+    width: 100%; }
     .mainindex .mainindex__sec4 h2 {
-      grid-area: h2;
-      text-align: center; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__img {
-      grid-area: img;
-      display: flex;
-      justify-content: center;
-      height: 18rem; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__img img {
-        width: 90%;
-        height: 18rem; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__img2 {
-      grid-area: img2;
-      display: flex;
-      justify-content: center;
-      height: 18rem; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__img2 img {
-        width: 90%;
-        height: 18rem; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__img3 {
-      grid-area: img3;
-      display: flex;
-      justify-content: center;
-      height: 18rem; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__img3 img {
-        width: 90%;
-        height: 18rem; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__ph3 {
-      grid-area: ph3;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__ph3 p {
-        text-align: left; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__ph3 h3 {
+      text-align: center;
+      font-size: 4.25rem;
+      text-decoration: underline #319fe7;
+      font-family: Tiemann, serif; }
+    .mainindex .mainindex__sec4 .mainindex__sec4__div1 {
+      margin-top: 8rem;
+      width: 97%;
+      display: grid;
+      grid-template-columns: 42.5% 30% 32.5%;
+      grid-template-areas: "img h2 b" "img p b"; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div1 p {
         text-align: left;
-        width: 90%;
-        padding-right: 1rem; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__ph32 {
-      grid-area: ph32;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__ph32 p {
-        text-align: right; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__ph32 h3 {
-        text-align: right; }
-    .mainindex .mainindex__sec4 .mainindex__sec4__phr33 {
-      grid-area: ph33;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__phr33 p {
-        text-align: left; }
-      .mainindex .mainindex__sec4 .mainindex__sec4__phr33 h3 {
-        text-align: left; }
-    .mainindex .mainindex__sec4 .b {
-      grid-area: b; }
-    .mainindex .mainindex__sec4 .b2 {
-      grid-area: b2; }
-    .mainindex .mainindex__sec4 .b3 {
-      grid-area: b3; }
+        line-height: 2rem;
+        font-size: 1.125rem; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3 {
+        text-align: left;
+        font-size: 2.3rem;
+        text-decoration: underline #319fe7;
+        font-family: Tiemann, serif; }
+    .mainindex .mainindex__sec4 .mainindex__sec4__div2 {
+      width: 97%;
+      display: grid;
+      grid-template-columns: 32.5% 25% 42.5%;
+      grid-template-areas: "b h2 img" "b p img";
+      margin-top: 15rem; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div2 p {
+        text-align: right;
+        line-height: 2rem;
+        font-size: 1.125rem; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3 {
+        text-align: right;
+        font-size: 2.3rem;
+        text-decoration: underline #319fe7;
+        font-family: Tiemann, serif; }
+    .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+      width: 97%;
+      display: grid;
+      grid-template-columns: 42.5% 30% 32.5%;
+      grid-template-areas: "img h2 b" "img p b";
+      margin-top: 15rem; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+        text-align: left;
+        line-height: 2rem;
+        font-size: 1.125rem; }
+      .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+        text-align: left;
+        font-size: 2.3rem;
+        text-decoration: underline #319fe7;
+        font-family: Tiemann, serif; }
+
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
 
 /*estilos de nos*/
 .contenedornos {
@@ -285,6 +344,23 @@
     padding: 1rem; }
   .contenedornos .contenedornos__div__p1 {
     display: none; }
+
+.mainindex .mainindex__sec4 .mainindex__sec4__div1, .mainindex .mainindex__sec4 .mainindex__sec4__div2, .mainindex .mainindex__sec4 .mainindex__sec4__div3 {
+  row-gap: 1rem;
+  margin-bottom: 2rem;
+  column-gap: 1rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 p, .mainindex .mainindex__sec4 .mainindex__sec4__div2 p, .mainindex .mainindex__sec4 .mainindex__sec4__div3 p {
+    grid-area: p; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div2 h3, .mainindex .mainindex__sec4 .mainindex__sec4__div3 h3 {
+    grid-area: h2;
+    padding-top: 2rem; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 img, .mainindex .mainindex__sec4 .mainindex__sec4__div2 img, .mainindex .mainindex__sec4 .mainindex__sec4__div3 img {
+    width: 100%;
+    height: 18rem;
+    grid-area: img; }
+  .mainindex .mainindex__sec4 .mainindex__sec4__div1 div, .mainindex .mainindex__sec4 .mainindex__sec4__div2 div, .mainindex .mainindex__sec4 .mainindex__sec4__div3 div {
+    grid-area: b;
+    width: 80%; }
 
 /* estilos de la mediaquerie */
 @media screen and (min-width: 600px) {
